[gd_scene load_steps=3 format=3 uid="uid://dttywpvtnwqma"]

[ext_resource type="Script" uid="uid://dcbjmfydi8c5t" path="res://main.gd" id="1_1bvp3"]
[ext_resource type="Texture2D" uid="uid://dcloifp26trw0" path="res://assets/Background/Yellow.png" id="2_0xm2m"]

[node name="Main" type="Node"]
script = ExtResource("1_1bvp3")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0xm2m")
stretch_mode = 1

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -319.0
offset_top = -196.0
offset_right = 320.0
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "2D Platformer Demo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level1" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = 61.0
offset_right = -128.0
offset_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
text = "Level 1"

[node name="Level2" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 128.0
offset_top = 60.0
offset_right = 256.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
text = "Level 2
"

[connection signal="pressed" from="Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Level2" to="." method="_on_level_2_pressed"]
